--- a/MAP.html
+++ b/MAP.html
@@ -98,6 +98,9 @@
 
   </style>
 
+  <script src="https://unpkg.com/leaflet.gridlayer.googlemutant@latest/dist/Leaflet.GoogleMutant.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-qCWLhkjYc9IYNztAWPmPatlxhCqKzR8"></script>
+
 </head>
 
 <body>
