--- a/map.html
+++ b/map.html
@@ -158,27 +158,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <script>
-  // Ganti dengan URL Web App yang lo dapet dari Apps Script
-  const apiUrl = 'https://script.google.com/macros/s/AKfycbysOsW_I0X2UxA6Gl0KwfFtFwG39imuqM4qfPPDl_alNh1TBWBIPB9kbbYvbKU3OZE/exec';
-
-  fetch(apiUrl)
-    .then(response => response.json())
-    .then(data => {
-      console.log(data); // Cek datanya di console browser
-
-      // Di sini lo proses datanya dan tampilin di peta
-      // Contoh:
-      // data.forEach(item => {
-      //   const latitude = item.Latitude; // Sesuaikan nama kolom
-      //   const longitude = item.Longitude; // Sesuaikan nama kolom
-      //   // Tambahkan marker ke peta pake Leaflet atau Google Maps
-      //   L.marker([latitude, longitude]).addTo(map);
-      // });
-    })
-    .catch(error => console.error('Error fetching data:', error));
-</script>
-
-<script>
 
 // --- KONFIGURASI PETA DAN DATA ---
 
@@ -808,6 +787,39 @@ function updateMarkerPopupsWithLogs() {
 
 // --- JALANKAN APLIKASI ---
 $(document).ready(initializeApp);
+</script>
+  <script>
+  // PASTIKAN INI ADALAH URL WEB APP LO YANG BENAR
+  const apiUrl = 'https://script.google.com/macros/s/AKfycbysOsW_I0X2UxA6Gl0KwfFtFwG39imuqM4qfPPDl_alNh1TBWBIPB9kbbYvbKU3OZE/exec';
+
+  // Kode ini akan mengambil data dari URL di atas
+  fetch(apiUrl)
+    .then(response => response.json())
+    .then(data => {
+      console.log("Data berhasil diambil dari Google Sheet:", data);
+
+      // Looping untuk setiap baris data
+      data.forEach(item => {
+        // PENTING: Sesuaikan nama 'Latitude', 'Longitude', 'Nama' 
+        // dengan nama header di Google Sheet lo. Harus sama persis.
+        const lat = item.Latitude; 
+        const lon = item.Longitude;
+        const nama = item.Nama; 
+
+        // Cek jika data lokasi ada
+        if (lat && lon) {
+          const marker = L.marker([lat, lon]);
+          
+          if (nama) {
+            marker.bindPopup(`<b>${nama}</b>`);
+          }
+          
+          // Tambahkan marker ke layer cluster yang sudah ada
+          stationClusterGroup.addLayer(marker);
+        }
+      });
+    })
+    .catch(error => console.error('Error saat mengambil data:', error));
 </script>
 </body>
 </html>
