--- a/map.html
+++ b/map.html
@@ -617,6 +617,7 @@ function initializeApp() {
     map.addLayer(stationClusterGroup);
     map.addLayer(logClusterGroup);
     createLayers();
+  loadDynamicData();
     setupUIListeners();
     selectAll(true);
 }
