--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
 
   <meta charset="utf-8" />
 
-  <title>Peta Interaktif Marker + Polygon + Log</title>
+  <title>JATSC Radio Visualization (JARVIS)</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
