--- a/map.html
+++ b/map.html
@@ -129,6 +129,8 @@
         <button class="btn btn-sm btn-primary" onclick="selectAll(true)">Expand All</button>
         <button class="btn btn-sm btn-danger" onclick="selectAll(false)">Collapse All</button>
     </div>
+  </div>
+  </div>
 
 <div id="map"></div>
 
