--- a/map.html
+++ b/map.html
@@ -95,7 +95,6 @@
     max-width: 220px; /* Lebar maksimum 220px di layar besar */
     min-width: 160px; /* Lebar minimum 160px di layar kecil */
     }
-}
 
   </style>
 
@@ -129,7 +128,6 @@
         <button class="btn btn-sm btn-primary" onclick="selectAll(true)">Expand All</button>
         <button class="btn btn-sm btn-danger" onclick="selectAll(false)">Collapse All</button>
     </div>
-  </div>
   </div>
 
 <div id="map"></div>
@@ -203,27 +201,21 @@ function formatDate(date) {
 function loadDynamicData() {
     const apiUrl = 'https://script.google.com/macros/s/AKfycbysOsW_I0X2UxA6Gl0KwfFtFwG39imuqM4qfPPDl_alNh1TBWBIPB9kbbYvbKU3OZE/exec';
 
-  fetch(apiUrl)
-    .then(response => response.json())
-    .then(data => {
-        console.log("Data log dari Google Sheet:", data);
+    fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+            console.log("Data log dari Google Sheet:", data);
+            const stationLocations = {};
+            mapConfig.locations.forEach(loc => {
+                stationLocations[loc.varname] = loc;
+            });
 
-        // Buat 'kamus' untuk mencari lokasi stasiun dengan cepat
-        const stationLocations = {};
-        mapConfig.locations.forEach(loc => {
-            stationLocations[loc.varname] = loc;
-        });
+            logClusterGroup.clearLayers();
+            logMarkersBySector = {};
+            radioLogs = {};
 
-        // Kosongkan data log lama sebelum menambahkan yang baru
-        logClusterGroup.clearLayers();
-        logMarkersBySector = {};
-        radioLogs = {};
-
-        // Proses setiap data log
-        data.forEach(logItem => {
-            const station = stationLocations[logItem.radio_id];
-
-          const stationVarname = (logItem.radio_id || "").trim().toUpperCase();
+            data.forEach(logItem => {
+                const stationVarname = (logItem.radio_id || "").trim().toUpperCase();
                 if (stationVarname) {
                     if (!radioLogs[stationVarname]) {
                         radioLogs[stationVarname] = [];
@@ -231,48 +223,32 @@ function loadDynamicData() {
                     radioLogs[stationVarname].push(logItem);
                 }
 
-            if (station && logItem.radial != null && logItem.distance != null) {
-                const destination = calculateDestinationPoint(
-                    station.latitude, 
-                    station.longitude, 
-                    logItem.radial, 
-                    logItem.distance
-                );
-                const markerColor = getReadabilityColor(logItem.readibility);
-                const logMarker = L.circleMarker(destination, {
-                    radius: 6,
-                    color: markerColor,
-                    fillColor: markerColor,
-                    fillOpacity: 0.9
-                });
-                const popupContent = `
-                    <b>Log dari: ${station.name}</b><hr style="margin: 5px 0;">
-                    <b>Callsign:</b> ${logItem.callsign || '-'}<br>
-                    <b>Level:</b> FL${logItem.level || '-'}<br>
-                    <b>Readability:</b> ${logItem.readibility || '-'}<br>
-                    <b>Radial:</b> ${logItem.radial}°<br>
-                    <b>Distance:</b> ${logItem.distance}nm
-                `;
-                logMarker.bindPopup(popupContent);
+                const station = stationLocations[logItem.radio_id];
+                if (station && logItem.radial != null && logItem.distance != null) {
+                    const destination = calculateDestinationPoint(station.latitude, station.longitude, logItem.radial, logItem.distance);
+                    const markerColor = getReadabilityColor(logItem.readibility);
+                    const logMarker = L.circleMarker(destination, { radius: 6, color: markerColor, fillColor: markerColor, fillOpacity: 0.9 });
+                    const popupContent = `<b>Log dari: ${station.name}</b><hr style="margin: 5px 0;"><b>Callsign:</b> ${logItem.callsign || '-'}<br><b>Level:</b> FL${logItem.level || '-'}<br><b>Readability:</b> ${logItem.readibility || '-'}<br><b>Radial:</b> ${logItem.radial}°<br><b>Distance:</b> ${logItem.distance}nm`;
+                    logMarker.bindPopup(popupContent);
 
-                // --- BAGIAN PENTING ADA DI SINI ---
-                // 1. Dapatkan nama sektor dari stasiunnya
-                const sector = station.sector;
-
-                // 2. Buat wadah untuk sektor ini jika belum ada
-                if (!logMarkersBySector[sector]) {
-                    logMarkersBySector[sector] = [];
+                    const sector = station.sector;
+                    if (!logMarkersBySector[sector]) {
+                        logMarkersBySector[sector] = [];
+                    }
+                    logMarkersBySector[sector].push(logMarker);
                 }
+            });
 
-                // 3. Masukkan marker log ke dalam wadah sektor yang sesuai
-                logMarkersBySector[sector].push(logMarker);
-            }
-        });
+            // Panggil filter untuk menerapkan ke data log yang baru
+            filterByDropdown();
 
-        // 4. Panggil ulang fungsi filter untuk menerapkan filter ke data log yang baru
-        filterByDropdown();
-    })
-    .catch(error => console.error('Gagal mengambil data:', error));
+            // TAMBAHAN: Update popup stasiun dengan data log baru
+            updateMarkerPopupsWithLogs();
+
+            // Bangun ulang indeks pencarian agar log baru bisa dicari
+            buildSearchIndex();
+        })
+        .catch(error => console.error('Gagal mengambil data:', error));
 }
 
 /** Menginisialisasi peta, layer, dan UI listeners */
@@ -356,33 +332,35 @@ const dropdownOptions = [];
     fuse = new Fuse(searchData, options);
 }
 
-  function performSearch() {
+function performSearch() {
     const searchTerm = document.getElementById('search-box').value;
 
-    // Jika search box kosong, tampilkan semua marker
     if (searchTerm.trim() === '') {
-        markerClusterGroup.clearLayers();
-        mapConfig.locations.forEach(loc => markerClusterGroup.addLayer(loc._marker));
+        // Jika kosong, KOSONGKAN cluster stasiun
+        stationClusterGroup.clearLayers();
+        // Lalu tampilkan lagi SEMUA stasiun sesuai filter dropdown yg aktif
+        filterByDropdown(); 
         return;
     }
 
-    // Lakukan pencarian dengan Fuse.js
     const results = fuse.search(searchTerm);
+    
+    // Selalu kosongkan cluster stasiun sebelum menampilkan hasil baru
+    stationClusterGroup.clearLayers();
 
-    // Kosongkan peta dari semua marker
-    markerClusterGroup.clearLayers();
-
-    // Ambil hanya marker dari hasil pencarian dan tambahkan kembali ke peta
+    // Ambil marker dari hasil pencarian
     const resultMarkers = results.map(result => result.item._marker);
+    
     if (resultMarkers.length > 0) {
-        markerClusterGroup.addLayers(resultMarkers);
+        // Tambahkan HASIL PENCARIAN ke stationClusterGroup
+        stationClusterGroup.addLayers(resultMarkers);
 
-        // (Bonus) Jika hanya ada 1 hasil, zoom ke lokasi tersebut
         if (resultMarkers.length === 1) {
             map.setView(resultMarkers[0].getLatLng(), 13);
             resultMarkers[0].openPopup();
         }
     }
+    // Jika tidak ada hasil, stationClusterGroup akan tetap kosong, dan itu benar.
 }
 
 /** Menyiapkan semua event listener untuk UI */
