--- a/map.html
+++ b/map.html
@@ -42,7 +42,7 @@
 
 <body>
     <div id="controls">
-        <strong>Pencarian & Filter Sektor:</strong> 
+        <strong>Filter Sektor:</strong> 
         <select id="sector-search-box" class="form-control" multiple="multiple">
         </select>
 
