--- a/map.html
+++ b/map.html
@@ -406,6 +406,43 @@ function updateMarkerPopupsWithLogs() {
                     mapConfig = configData;
                     initializeApp();
                     createLayers();
+
+                                const measureControl = L.control.measure({
+                position: 'topleft',
+                primaryLengthUnit: 'nauticalmiles',
+                secondaryLengthUnit: 'kilometers',
+                activeColor: '#0078A8',
+                completedColor: '#00A884'
+            });
+            measureControl.addTo(map);
+
+            let clickCount = 0;
+            let firstPoint = null;
+
+            map.on('measurestart', function() {
+                clickCount = 0;
+                firstPoint = null;
+                $('.leaflet-measure-resultspopup').hide();
+            });
+
+            map.on('click', function(e) {
+                if (measureControl._measuring) {
+                    clickCount++;
+                    if (clickCount === 1) {
+                        firstPoint = e.latlng;
+                    } else if (clickCount === 2) {
+                        measureControl._finishMeasure();
+                    }
+                }
+            });
+
+            map.on('measurefinish', function(e) {
+                const distanceInNm = e.length;
+                const lastPoint = e.lastpoint;
+                const midpoint = L.latLng((firstPoint.lat + lastPoint.lat) / 2, (firstPoint.lng + lastPoint.lng) / 2);
+                const popupContent = `<div style="text-align: center;"><strong style="font-size: 14px;">Hasil Pengukuran</strong><br><span style="font-size: 18px; color: #0078A8; font-weight: bold;">${distanceInNm.toFixed(2)} NM</span></div>`;
+                L.popup().setLatLng(midpoint).setContent(popupContent).openOn(map);
+            });
                     
                     $('#sector-select-box').select2({
                         placeholder: 'Pilih satu/lebih sektor...',
