--- a/map.html
+++ b/map.html
@@ -394,30 +394,58 @@ function updateMarkerPopupsWithLogs() {
                     initializeApp();
                     createLayers();
                     
-                    const measureControl = L.control.measure({
-                        position: 'topleft', primaryLengthUnit: 'nauticalmiles', secondaryLengthUnit: 'kilometers',
-                        activeColor: '#0078A8', completedColor: '#00A884'
-                    });
-                    measureControl.addTo(map);
+                // 1. Inisialisasi Kontrol Ruler (tetap diperlukan untuk membuat tombolnya)
+                const measureControl = L.control.measure({
+                    position: 'topleft',
+                    primaryLengthUnit: 'nauticalmiles',
+                    secondaryLengthUnit: 'kilometers',
+                    activeColor: '#0078A8',
+                    completedColor: '#00A884'
+                });
+                measureControl.addTo(map);
 
-                    let clickCount = 0, firstPoint = null;
-                    map.on('measurestart', function() {
-                        clickCount = 0; firstPoint = null;
-                        $('.leaflet-measure-resultspopup').hide();
-                    });
-                    map.on('click', function(e) {
-                        if (measureControl._measuring) {
-                            clickCount++;
-                            if (clickCount === 1) { firstPoint = e.latlng; } 
-                            else if (clickCount === 2) { measureControl._finishMeasure(); }
+                // 2. "Bajak" tombol utama ruler
+                // Tombol ini punya class '.leaflet-control-measure-toggle'
+                $('.leaflet-control-measure-toggle').on('click', function(e) {
+                    e.preventDefault(); // Mencegah aksi default (membuka panel)
+                    
+                    // Jika kita sedang tidak mengukur, maka mulai pengukuran.
+                    // Jika sedang mengukur, biarkan aksi default (cancel) berjalan.
+                    if (!measureControl._measuring) {
+                        // Cari tombol 'Ukur Jarak' di dalam panel (yang tersembunyi)
+                        // dan klik secara otomatis untuk langsung memulai mode gambar.
+                        $('a[title="Measure distance"]').click();
+                    }
+                });
+
+                // 3. Logika custom untuk alur 2-klik
+                let clickCount = 0;
+                let firstPoint = null;
+
+                map.on('measurestart', function() {
+                    clickCount = 0;
+                    firstPoint = null;
+                });
+
+                map.on('click', function(e) {
+                    if (measureControl._measuring) {
+                        clickCount++;
+                        if (clickCount === 1) {
+                            firstPoint = e.latlng;
+                        } else if (clickCount === 2) {
+                            measureControl._finishMeasure();
                         }
-                    });
-                    map.on('measurefinish', function(e) {
-                        const distanceInNm = e.length, lastPoint = e.lastpoint;
-                        const midpoint = L.latLng((firstPoint.lat + lastPoint.lat) / 2, (firstPoint.lng + lastPoint.lng) / 2);
-                        const popupContent = `<div style="text-align: center;"><strong style="font-size: 14px;">Hasil Pengukuran</strong><br><span style="font-size: 18px; color: #0078A8; font-weight: bold;">${distanceInNm.toFixed(2)} NM</span></div>`;
-                        L.popup().setLatLng(midpoint).setContent(popupContent).openOn(map);
-                    });
+                    }
+                });
+
+                map.on('measurefinish', function(e) {
+                    if (!firstPoint) return; // Mencegah error jika pengukuran di-cancel
+                    const distanceInNm = e.length;
+                    const lastPoint = e.lastpoint;
+                    const midpoint = L.latLng((firstPoint.lat + lastPoint.lat) / 2, (firstPoint.lng + lastPoint.lng) / 2);
+                    const popupContent = `<div style="text-align: center;"><strong style="font-size: 14px;">Hasil Pengukuran</strong><br><span style="font-size: 18px; color: #0078A8; font-weight: bold;">${distanceInNm.toFixed(2)} NM</span></div>`;
+                    L.popup().setLatLng(midpoint).setContent(popupContent).openOn(map);
+                });
 
                     $('#sector-select-box').select2({
                         placeholder: 'Pilih satu/lebih sektor...',
