--- a/map.html
+++ b/map.html
@@ -90,9 +90,11 @@
     #controls.is-hidden #toggle-controls-btn i {
         transform: rotate(180deg);
     }
-            .leaflet-measure-window {
-        display: none !important;
-    }
+
+    .leaflet-measure-window,
+    .leaflet-measure-resultspopup {
+    display: none !important;
+}
     </style>
 </head>
 <body>
